Work on SA2, visibility, IE fix

--- a/css/Mystyle.css
+++ b/css/Mystyle.css
@@ -55,6 +55,11 @@ body{
   font-family: "champagne et limousine", "Comic Sans";
 }
 
+.container{
+  width: 80%;
+  margin-left: 10%;
+}
+
 body p{
   font-size: 1.2em;
 }
@@ -68,18 +73,31 @@ body p{
 	max-height: auto;
 }
 /*Parallax*/
+
 .parallax-container {
     min-height: 400px;
     background: transparent;
 }
 /*CONTACT*/
-iframe{
 
+.panel-body iframe{
+  width: 100%;
 }
 
 /* EQUIPE */
-.test{
-  text-align: left;
+
+.equipe a{
+  text-decoration: none;
+  color: #101010;
 }
+
+.equipe a:hover{
+  color: #2E9AFE;
+}
+
+.equipe .col-sm-6{
+  margin-top: 5%;
+}
+
 
 /*CABINET*/
